// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Should render and match the snapshot 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  border: 2px solid #09310b;
  border-radius: 0.25rem;
  color: #09310b;
  cursor: pointer;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0.5rem;
  text-align: left;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  white-space: nowrap;
  z-index: 2;
}

<Link
  className="c0"
  replace={false}
  to="/"
/>
`;

exports[`<Link /> The "odd" property Should adopt "false" as value 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  border: 2px solid #09310b;
  border-radius: 0.25rem;
  color: #09310b;
  cursor: pointer;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0.5rem;
  text-align: left;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  white-space: nowrap;
  z-index: 2;
}

<Link
  className="c0"
  odd="false"
  replace={false}
  to="/"
/>
`;

exports[`<Link /> The "odd" property Should adopt "true" as value 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  border: 2px solid #00599e;
  border-radius: 0.25rem;
  color: #00599e;
  cursor: pointer;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0.5rem;
  text-align: left;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  white-space: nowrap;
  z-index: 2;
}

<Link
  className="c0"
  odd="true"
  replace={false}
  to="/"
/>
`;
